# jaxtransformers

./: .gitignore  README.md  justfile  main.py  pyproject.toml
gpt-jax/src/: model.py
gpt-rs/: Cargo.toml
scripts/: check_shards.py  prepare_data.py
