[project]
name = "jaxtransformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.6",
    "jax[cpu]>=0.10.0",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
